--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./resources/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="sentence-generator.js"></script>
+    <script type="text/javascript" src="./sentence-generator.js"></script>
     <title>Crazy Fortune Teller</title>
 </head>
 <body>
@@ -18,6 +18,6 @@
         <img src="./resources/img/fortune teller 1.png">
         <textarea type="text" id="result" disabled></textarea>
         
-        </main>
+    </main>
 </body>
 </html>
