create a separate js file to store sentence object and export to main js file with functions and methods

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <textarea type="text" id="result" disabled></textarea>
         
     </main>
-    <script src="./sentence-generator.js"></script>
+    <script src="./sentence-generator.js" type="module"></script>
     
 </body>
 </html>
